# dgp2019_exercise5

curvature/: CMakeLists.txt  curvature.cpp  curvature_test.cpp  viewer.cpp  viewer.h
